WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282346
Take a foreground activity assertion for Web Extension background content
https://bugs.webkit.org/show_bug.cgi?id=282346
Summary
Take a foreground activity assertion for Web Extension background content
Timothy Hatcher
Reported
2024-10-30 12:20:09 PDT
Follow up from
bug 276573
. We need to take an assertion to ensure the background web views get CPU time and are not suspended.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-30 12:20:19 PDT
<
rdar://problem/138936474
>
Timothy Hatcher
Comment 2
2024-10-30 12:35:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35955
EWS
Comment 3
2024-10-30 15:02:21 PDT
Committed
285928@main
(ec4101c7ba77): <
https://commits.webkit.org/285928@main
> Reviewed commits have been landed. Closing PR #35955 and removing active labels.
EWS
Comment 4
2024-11-04 06:00:07 PST
Committed
283286.411@safari-7620-branch
(0132e738bb84): <
https://commits.webkit.org/283286.411@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2178 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug