Take a foreground activity assertion for Web Extension background content. https://webkit.org/b/282346 rdar://problem/138936474

Reviewed by Brian Weinstein.

We need to take a foreground activity assertion to prevent the background web view process
from being suspended and not responding to events.

Refactor the inspector extension maps into one, since we need to track an activity there too,
and having a single map is more maintainable.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionContextCocoa.mm:
(WebKit::WebExtensionContext::unload):
(WebKit::WebExtensionContext::getCurrentTab const):
(WebKit::WebExtensionContext::inspectorBackgroundPageIdentifiers const):
(WebKit::WebExtensionContext::inspectorPageIdentifiers const):
(WebKit::WebExtensionContext::loadBackgroundWebView):
(WebKit::WebExtensionContext::unloadBackgroundWebView):
(WebKit::WebExtensionContext::unloadBackgroundContentIfPossible):
(WebKit::WebExtensionContext::loadedInspectors const):
(WebKit::WebExtensionContext::inspectorExtension const):
(WebKit::WebExtensionContext::inspector const):
(WebKit::WebExtensionContext::processes const):
(WebKit::WebExtensionContext::isInspectorBackgroundPage const):
(WebKit::WebExtensionContext::loadInspectorBackgroundPage):
(WebKit::WebExtensionContext::unloadInspectorBackgroundPage):
* Source/WebKit/UIProcess/Extensions/WebExtensionContext.h:

Canonical link: https://commits.webkit.org/285928@main